# termtome

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: app.rs  main.rs
src/storage/: bookmarks.rs
src/ui/: help.rs
