[package]
name = "termtome"
version = "0.1.0"
edition = "2024"
default-run = "termtome"

[dependencies]
chrono = "0.4.44"
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
directories = "6.0.0"
epub = "2.1.5"
html2text = "0.16.7"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
urlencoding = "2.1.3"
uuid = { version = "1.23.1", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
